--- a/todos-api/Gemfile
+++ b/todos-api/Gemfile
@@ -23,7 +23,7 @@ gem 'bcrypt', '~> 3.1.7'
 gem 'jwt'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
-
+gem 'active_model_serializers', '~> 0.10.0'
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 # gem 'rack-cors'
 
@@ -49,4 +49,5 @@ group :test do
   gem 'shoulda-matchers', git: 'https://github.com/thoughtbot/shoulda-matchers.git', branch: 'rails-5'
   gem 'faker'
   gem 'database_cleaner'
+  gem 'simplecov', :require => false
 end
